@@ -13,7 +13,7 @@ that you have the following installed:
 - Image::Size
 - CGI::FastTemplate
 - CGI
-- Inline::C
+- Image::Imlib2
 - X11 libraries (ie, XFree86)
 - Imlib2 (http://prdownloads.sourceforge.net/enlightenment/imlib2-1.0.3.tar.gz)
 
@@ -86,10 +86,6 @@ by mod_autoindex.
 Copy the files from templates/ to where you pointed GalleryTemplateDir to,
 copy htdocs/folder.png and htdocs/video-*.png to your Apache icons 
 directory and copy htdocs/gallery.css to the DocumentRoot of your gallery.
-
-Make sure your httpd can write to the temporary directory (usually /tmp).
-This will be used by the Inline module to compile the c-code used to
-access functions in Imlib2.
 
 It is possible to include a graphical copyright notice on each picture now.
 By setting the GalleryCopyrightImage PerlSetVar you can define the path
